[project]
name = "hmgcc-authorship-detection-feature-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "emoji>=2.15.0",
    "fastapi>=0.128.0",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.2",
    "spacy>=3.8.11",
    "textstat>=0.7.12",
    "torch>=2.10.0",
    "transformers>=5.0.0",
    "uvicorn>=0.40.0",
]
